feat: Added more fields to models; fix: Changed user edit func
