# docs/swagger.json
@@ -1216,7 +1216,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "company"
+                    "admin"
                 ],
                 "summary": "List all companies",
                 "responses": {
@@ -1899,7 +1899,9 @@
             "required": [
                 "contact_email",
                 "contact_name",
-                "name"
+                "description",
+                "name",
+                "sector"
             ],
             "properties": {
                 "contact_email": {
@@ -1910,9 +1912,17 @@
                     "type": "string",
                     "example": "John Doe"
                 },
+                "description": {
+                    "type": "string",
+                    "example": "We do something xyz and make money"
+                },
                 "name": {
                     "type": "string",
                     "example": "Acme Inc"
+                },
+                "sector": {
+                    "type": "string",
+                    "example": "xyz"
                 }
             }
         },
